[package]
name = "friend"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.3"
solana-program = "2.1.2"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []